--- a/UploadDataToDatabase/Resources/EmailTemplate.html
+++ b/UploadDataToDatabase/Resources/EmailTemplate.html
@@ -36,8 +36,7 @@
                         <td style="padding: 10px 0 10px 0;">
                             <p>Contact points:</p>
                             <p><i>Mr An - email : ducan.tran@techlink.vn</i> </p>
-                            
-                           
+                            <p><i>Mr Long - email : long.thanhle@techlink.vn</i></p>
                         </td>
 
                     </tr>
